[package]
name = "worldping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
exemplar = "0.9.0"
libc = "0.2.150"
rusqlite = "0.30.0"
socket2 = { version = "0.5.5", features = ["all"] }
