[package]
name = "worldping"
authors = ["Colonial"]
version = "0.5.0"
edition = "2021"

description = "A command line tool for mass IPv4 pinging."
repository = "https://github.com/Colonial-Dev/worldping"
license = "MIT OR Apache-2.0"

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
exemplar = "0.9.0"
indicatif = "0.17.7"
libc = "0.2.150"
rusqlite = "0.30.0"
socket2 = { version = "0.5.5", features = ["all"] }
